[package]
name = "media-server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
futures = "0.3.31"
webrtc = "0.11.0"
lazy_static = "1.5.0"